--- a/src/styles/_4_landing.scss
+++ b/src/styles/_4_landing.scss
@@ -1,10 +1,22 @@
 .landing-page {
-  width: 100%;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
+
+.img-cover {
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.landing-page,
+.img-cover {
+  width: 100%;
+  height: 100vh;
 }
 
 .landing-text {
@@ -35,6 +47,7 @@
 
 .header-text p {
   transition: font-size 0.5s ease;
+  max-width: 532px;
 }
 
 .header-name,
@@ -74,7 +87,7 @@
 .header-text,
 .landing-text.loaded.out .header-text {
   margin: 25px 0 0;
-  color: #b3b3b3;
+  color: #a4a4a4;
   text-align: center;
   transform: translateY(100px);
   transition-delay: 0s;
@@ -127,13 +140,4 @@
   transform: rotate(45deg);
   opacity: 0.4;
   border-radius: 0 0 4px 0;
-}
-
-.img-cover {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
 }
